==> joernalraun/MIND-/USB CDC/Core/Src/BMI160.c <==
#include "BMI160.h"

int8_t setSensConf(struct bmi160Dev *dev){
  int8_t rslt = BMI160_OK;
  dev->accelCfg.odr = BMI160_ACCEL_ODR_1600HZ;
  dev->accelCfg.range = BMI160_ACCEL_RANGE_2G;
  dev->accelCfg.bw = BMI160_ACCEL_BW_NORMAL_AVG4;

  dev->accelCfg.power = BMI160_ACCEL_NORMAL_MODE;

  dev->gyroCfg.odr = BMI160_GYRO_ODR_3200HZ;
  dev->gyroCfg.range = BMI160_GYRO_RANGE_2000_DPS;
  dev->gyroCfg.bw = BMI160_GYRO_BW_NORMAL_MODE;

  dev->gyroCfg.power = BMI160_GYRO_NORMAL_MODE;


  rslt = setAccelConf(dev);
  if (rslt == BMI160_OK) {
    rslt = setGyroConf(dev);
    if (rslt == BMI160_OK) {
      /* write power mode for accel and gyro */
      rslt = setPowerMode(dev);
      if (rslt == BMI160_OK)
        rslt = checkInvalidSettg(dev);
    }
  }

  return rslt;
}

int8_t setInt(int intNum){
  int8_t rslt=BMI160_OK;
  struct bmi160IntSettg intConfig;
  if (intNum == 1){
    intConfig.intChannel = BMI160_INT_CHANNEL_1;
  }else if(intNum == 2){
    intConfig.intChannel = BMI160_INT_CHANNEL_2;
  }else{
    return BMI160_E_NULL_PTR;
  }
  /* Select the Interrupt type */
  intConfig.intType = BMI160_STEP_DETECT_INT;// Choosing Step Detector interrupt
  /* Select the interrupt channel/pin settings */
  intConfig.intPinSettg.outputEn = BMI160_ENABLE;// Enabling interrupt pins to act as output pin
  intConfig.intPinSettg.outputMode = BMI160_DISABLE;// Choosing push-pull mode for interrupt pin
  intConfig.intPinSettg.outputType = BMI160_ENABLE;// Choosing active High output
  intConfig.intPinSettg.edgeCtrl = BMI160_ENABLE;// Choosing edge triggered output
  intConfig.intPinSettg.inputEn = BMI160_DISABLE;// Disabling interrupt pin to act as input
  intConfig.intPinSettg.latchDur =BMI160_LATCH_DUR_NONE;// non-latched output

  /* Select the Step Detector interrupt parameters, Kindly use the recommended settings for step detector */
  intConfig.intTypeCfg.accStepDetectInt.stepDetectorMode = BMI160_STEP_DETECT_NORMAL;
  intConfig.intTypeCfg.accStepDetectInt.stepDetectorEn = BMI160_ENABLE;// 1-enable, 0-disable the step detector
  rslt =setIntConfig(&intConfig, Obmi160);
  return rslt;
}

int8_t I2cGetRegs(struct bmi160Dev *dev, uint8_t reg_addr, uint8_t *data, uint16_t len){
  HAL_I2C_Master_Transmit(&hi2c2,dev->id<<1,&reg_addr,1,1000);
  HAL_Delay(10);
  HAL_I2C_Master_Receive(&hi2c2,dev->id<<1,data,len,1000);
  return BMI160_OK;
}

int8_t I2cSetRegs(struct bmi160Dev *dev, uint8_t reg_addr, uint8_t *data, uint16_t len){
  uint8_t buf[255]={0};
  buf[0]=reg_addr;
  for(int i=1;i<len+1;i++)
	  buf[i]=data[i-1];
  HAL_I2C_Master_Transmit(&hi2c2,dev->id<<1,buf,len+1,1000);
  return BMI160_OK;
}
