==> AbdoullahBougataya/penduleum-system/src/BMI160.cpp <==
#include"../include/BMI160.h"

int8_t BMI160::setSensConf()
{
  return BMI160::setSensConf(Obmi160);
}

int8_t BMI160::setSensConf(struct bmi160Dev *dev)
{
  int8_t rslt = BMI160_OK;
  dev->accelCfg.odr = BMI160_ACCEL_ODR_100HZ;
  dev->accelCfg.range = BMI160_ACCEL_RANGE_2G;
  dev->accelCfg.bw = BMI160_ACCEL_BW_OSR2_AVG2;

  dev->accelCfg.power = BMI160_ACCEL_NORMAL_MODE;

  dev->gyroCfg.odr = BMI160_GYRO_ODR_100HZ;
  dev->gyroCfg.range = BMI160_GYRO_RANGE_2000_DPS;
  dev->gyroCfg.bw = BMI160_GYRO_BW_OSR2_MODE;

  dev->gyroCfg.power = BMI160_GYRO_NORMAL_MODE;


  rslt = BMI160::setAccelConf(dev);
  if (rslt == BMI160_OK) {
    rslt = BMI160::setGyroConf(dev);
    if (rslt == BMI160_OK) {
      /* write power mode for accel and gyro */
      rslt = BMI160::setPowerMode(dev);
      if (rslt == BMI160_OK)
        rslt = BMI160::checkInvalidSettg(dev);
    }
  }

  return rslt;
}

int8_t BMI160::setInt()
{
  return setInt(Obmi160);
}

int8_t BMI160::setInt(struct bmi160Dev *dev)
{
  int8_t rslt=BMI160_OK;
  uint8_t data[4]={0};
  if (dev == NULL)
  {
    rslt = BMI160_E_NULL_PTR;
  } else {
    data[0] = BMI160_DATA_RDY_INT_EN_MASK;
    rslt = setRegs(BMI160_INT_ENABLE_1_ADDR, &data[0], 1, dev);
    if (rslt == BMI160_OK)
    {
      data[1] = BMI160_INT1_DATA_READY_MASK;
      rslt = setRegs(BMI160_INT_MAP_1_ADDR, &data[1], 1, dev);
      if (rslt == BMI160_OK)
      {
        data[2] = BMI160_INT1_PULL_PUSH_ACTIVE_HIGH_EDGE_TRIG;
        rslt = setRegs(BMI160_INT_OUT_CTRL_ADDR, &data[2], 1, dev);
        if (rslt == BMI160_OK)
        {
          data[3] = BMI160_INT1_NON_LATCHED_MASK;
          rslt = setRegs(BMI160_INT_LATCH_ADDR, &data[3], 1, dev);
        }
      }
    }
  }
  return rslt;
}

int8_t BMI160::I2cGetRegs(struct bmi160Dev *dev, uint8_t reg_addr, uint8_t *data, uint16_t len)
{
  Wire.beginTransmission(dev->id);
  Wire.write(reg_addr);
  Wire.endTransmission(true);
  delay(10);
  Wire.requestFrom(dev->id,len);

  for(int i = 0; i < len; i++){
    data[i]=Wire.read();
    delay(1);
  }
  return BMI160_OK;
}

int8_t BMI160::I2cSetRegs(struct bmi160Dev *dev, uint8_t reg_addr, uint8_t *data, uint16_t len)
{
  if ((dev->prevAccelCfg.power == BMI160_ACCEL_NORMAL_MODE)||(dev->prevGyroCfg.power == BMI160_GYRO_NORMAL_MODE)){
    Wire.beginTransmission(dev->id);
    Wire.write(reg_addr);
    for(int i = 0; i < len; i++){
      Wire.write(data[i]);
      delay(1);
    }
    Wire.endTransmission(true);
  }else{
    for(int i = 0; i < len; i++){
      Wire.beginTransmission(dev->id);
      Wire.write(reg_addr);
      Wire.write(data[i]);

      Wire.endTransmission(true);
      delay(1);
    }
  }
  return BMI160_OK;
}
